# server/model/request/user.go
@@ -37,3 +37,9 @@ type EditUser struct {
 type DeleteUser struct {
 	UUID string `json:"uuid" gorm:"primarykey" binding:"required"` // uuid
 }
+
+type Login struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+	Code     string `json:"code" binding:"required"`
+}
